--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,11 +4,12 @@ android:orientation="vertical" android:layout_width="fill_parent"
 android:layout_height="fill_parent">
 
 <TextView
-    android:layout_width="228dp"
-    android:layout_height="50dp"
-    android:textAlignment="center"
-    android:text="@string/loginform"
-    android:layout_gravity="center_horizontal" />
+    android:layout_width="fill_parent"
+    android:layout_height="70dp"
+    android:text="@string/app_name"
+    style="@style/Base.TextAppearance.AppCompat.Display2"
+    android:gravity="center_vertical|center_horizontal" />
+
 
 <TextView
     android:layout_width="fill_parent"
@@ -30,7 +31,8 @@ android:layout_height="fill_parent">
         android:inputType="textPassword"
         />
 <Button android:id="@+id/btnLogin"
-    android:layout_width="fill_parent"
+    android:layout_width="221dp"
     android:layout_height="wrap_content"
-    android:text="@string/login" />
+    android:text="@string/login"
+    />
 </LinearLayout>
